crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_HM87__00.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: HM87/00
input: "[:x]\n"
diagnostics:

cst:
YAML_STREAM@0..5
  YAML_DOCUMENT@0..5
    YAML_FLOW_SEQUENCE@0..4
      YAML_SCALAR@0..1 "["
      YAML_FLOW_SEQUENCE_ITEM@1..3
        YAML_COLON@1..2 ":"
        YAML_SCALAR@2..3 "x"
      YAML_SCALAR@3..4 "]"
    NEWLINE@4..5 "\n"
